--- a/styles.css
+++ b/styles.css
@@ -16,11 +16,12 @@ body {
     position: relative;
     width: 100%;
     max-width: 800px; /* Define uma largura máxima para o conteúdo */
+    height: 500px; /* Altura total para o container */
 }
 
 #title {
     font-size: 2.5rem; /* Tamanho do título */
-    margin-bottom: 20px; /* Espaço abaixo do título */
+    margin-top: 20px; /* Espaço acima do título */
     z-index: 2; /* Garante que o título fique sobreposto às imagens */
 }
 
