--- a/styles.css
+++ b/styles.css
@@ -32,36 +32,33 @@ body {
 .image-slider {
     margin-top: 20px;
     position: relative;
-    width: 250px; /* Defina uma largura fixa para o carrossel */
-    height: 250px; /* Defina uma altura fixa */
+    width: 250px; /* Largura das imagens */
+    height: 250px; /* Altura das imagens */
     margin: 0 auto; /* Centraliza o carrossel */
     overflow: hidden;
 }
 
 /* As imagens dentro do carrossel */
 .images {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+    position: relative;
+    width: 100%;
+    height: 100%;
 }
 
+/* Estilo para cada imagem dentro do carrossel */
 .images img {
-    width: 250px; /* Ajuste o tamanho das imagens */
-    height: 250px; /* Ajuste a altura das imagens */
-    object-fit: cover; /* Ajusta a imagem para não distorcer */
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* A imagem preencherá o container sem distorção */
     position: absolute;
     top: 0;
     left: 0;
-    right: 0;
-    bottom: 0;
-    display: none; /* Todas as imagens começam invisíveis */
+    display: none; /* Inicialmente, todas as imagens ficam invisíveis */
 }
 
-/* Exibição da imagem ativa */
+/* Para a imagem visível */
 .images img.active {
-    display: block; /* Apenas a imagem com a classe 'active' será visível */
+    display: block; /* Apenas a imagem ativa será visível */
 }
 
 /* Para os corações subindo */
