--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
 
 /* Centraliza o conteúdo na página */
 #container {
-    margin-top: 50px; /* Adiciona algum espaço no topo */
+    margin-top: 50px;
     text-align: center;
 }
 
